@@ -8,6 +8,7 @@ $(document).ready(function() {
 	$calendar.weekCalendar({
 		timeslotsPerHour : 4,
 		allowCalEventOverlap : true,
+        firstDayOfWeek : 1,
         businessHours :{start: 8, end: 18, limitDisplay: true },
 		height : function($calendar) {
 			return $(window).height() - $("h1").outerHeight();
